tests/NormalTests/paczka1/fuzzy1/55020875.err
Error in line 11: wyDM S460 57,2
Error in line 23: 1z41oN4Z8L S150 2,9
Error in line 28: qlP2 A616 52,1
Error in line 29: 1z41oN4Z8L A616 15,6
